--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ We do not have any short-term positions at this time.
   <tr>
     <td>
       <b>PhD Students</b><br>
+      <a href="https://himangim.github.io/">Himangi Mittal</a><br>
       <a href="https://homangab.github.io/">Homanga Bharadhwaj</a> (with Abhinav Gupta)<br>
       <a href="https://hzhupku.github.io/">Hanzhe Hu</a><br>
       <a href="https://yehonathanlitman.github.io">Yehonathan Litman</a>  (with  Fernando De la Torre) <br>
@@ -117,16 +118,18 @@ We do not have any short-term positions at this time.
     <td>
       <b>MS Students</b><br>
       <a href="https://thatbrguy.github.io/">Bharath Raj</a> (MSR)<br>
-      <a href="https://poorvirhebbar.github.io/">Poorvi Hebbar</a> (MSCV)<br>
+      <a href="https://yanbo-xu.netlify.app/">Yanbo Xu</a> (MSR)<br>
     </td>
   </tr>
   <tr><td><br></td></tr>
   <tr><td><b>Alumni</b><br>
-    <a href="https://www.zhiz.dev/">Zhizhuo (Z) Zhou</a>, 
+    <em>MSR</em>: <a href="https://www.zhiz.dev/">Zhizhuo (Z) Zhou</a> <br><br>
+    <em>MSCV</em>: <a href="https://poorvirhebbar.github.io/">Poorvi Hebbar</a>,
     <a href="https://serverprocessor.wordpress.com/">Naveen Venkat</a>,
-    <a href="https://mayankgrwl97.github.io/">Mayank Agarwal</a> <br>
-    <a href="https://yccyenchicheng.github.io/">Yen-Chi Cheng</a>, 
-    <a href="https://paritoshmittal12.github.io/">Paritosh Mittal</a><br>
+    <a href="https://mayankgrwl97.github.io/">Mayank Agarwal</a>, <br>
+    <a href="https://yccyenchicheng.github.io/">Yen-Chi Cheng</a>,
+    <a href="https://paritoshmittal12.github.io/">Paritosh Mittal</a>
+
     </td>
   </tr>
   <tr><td></td></tr>
@@ -140,8 +143,8 @@ We do not have any short-term positions at this time.
 <br>
 <table width="90%" width="90%" align="center" border="0" cellspacing="0" cellpadding="8" style="margin-left:15px">
 <tr><td colspan="2">
-  <a href="https://geometric3d.github.io/">16-822: Geometry-based Methods in Vision</a>. Fall 2022, Fall 2023 <br>
-  <a href="https://learning3d.github.io/">16-825: Learning for 3D Vision</a>. Spring 2022, Spring 2023
+  <a href="https://geometric3d.github.io/">16-822: Geometry-based Methods in Vision</a>. Fall 2023, 2022 <br>
+  <a href="https://learning3d.github.io/">16-825: Learning for 3D Vision</a>. Spring 2024, 2023, 2022
 </td></tr>
 </table>
 
@@ -149,7 +152,99 @@ We do not have any short-term positions at this time.
 </div>
 
 <div class="section">
-<h2> Publications (<a href="javascript:showselected()" id="select" >selected</a> | <a href="javascript:showall()" id="unselect" >all</a>) </h2><br><div class="year_heading" data-selected="n"><br>2023<hr width="220px" align="left"></div>
+<h2> Publications (<a href="javascript:showselected()" id="select" >selected</a> | <a href="javascript:showall()" id="unselect" >all</a>) </h2><br><div class="year_heading" data-selected="n"><br>preprints<hr width="220px" align="left"></div>
+<!--------------------------------------------------------------------------->
+<div class="paper" id="arxiv23upfusion" data-selected="y">
+<img class="paper" src="https://bharathrajn.com/assets/img/publication_preview/ITW_lock.gif" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">UpFusion: Novel View Diffusion from Unposed Sparse View Observations</b> <br/> 
+Bharath Raj Nagoor Kani, Hsin-Ying Lee, Sergey Tulyakov, <strong>Shubham Tulsiani</strong> <br/> 
+arXiv preprint, 2023 <br/> 
+<a href="https://arxiv.org/pdf/2312.06661.pdf">pdf </a>  &nbsp <a href="https://upfusion3d.github.io/">project page </a>  &nbsp <a href="javascript:toggleblock('arxiv23upfusionBib')">bibtex </a>  &nbsp <a href="https://github.com/upfusion3d/upfusion">code </a> </p>
+<div class="papermeta" id="arxiv23upfusionMeta">
+<pre xml:space="preserve" id="arxiv23upfusionBib">
+
+@article{upfusion2023,
+  author    = {Nagoor Kani, Bharath Raj and Lee, Hsin-Ying and Tulyakov, Sergey and Tulsiani, Shubham},
+  title     = {UpFusion: Novel View Diffusion from Unposed Sparse View Observations},
+  journal   = {arXiv preprint arXiv:2312.06661},
+  year      = {2023},
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('arxiv23upfusionBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
+<!--------------------------------------------------------------------------->
+<div class="paper" id="arxiv23hopman" data-selected="y">
+<img class="paper" src="figures/arxiv23hopman.gif" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">Towards Generalizable Zero-Shot Manipulation via Translating Human Interaction Plans</b> <br/> 
+Homanga Bharadhwaj, Abhinav Gupta*, Vikash Kumar* <strong>Shubham Tulsiani</strong>* <br/> 
+arXiv preprint, 2023 <br/> 
+<a href="https://homangab.github.io/hopman/hopman_paper_appendix.pdf">pdf </a>  &nbsp <a href="https://homangab.github.io/hopman/">project page </a>  &nbsp <a href="javascript:toggleblock('arxiv23hopmanBib')">bibtex </a> </p>
+<div class="papermeta" id="arxiv23hopmanMeta">
+<pre xml:space="preserve" id="arxiv23hopmanBib">
+
+@article{bharadhwaj2023towards,
+  title={Towards Generalizable Zero-Shot Manipulation via Translating Human Interaction Plans},
+  author={Bharadhwaj, Homanga and Gupta, Abhinav and Kumar, Vikash and Tulsiani, Shubham},
+  journal={arXiv preprint arXiv:2312.00775},
+  year={2023}
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('arxiv23hopmanBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
+<!--------------------------------------------------------------------------->
+<div class="paper" id="arxiv23roboagent" data-selected="n">
+<img class="paper" src="https://homangab.github.io/pics/robopen.png" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">RoboAgent: Towards Sample Efficient Robot Manipulation with Semantic Augmentations and Action Chunking</b> <br/> 
+Homanga Bharadhwaj*, Jay Vakil*, Mohit Sharma*, Abhinav Gupta, <strong>Shubham Tulsiani</strong>, Vikash Kumar <br/> 
+arXiv preprint, 2023 <br/> 
+<a href="https://robopen.github.io/media/roboagent.pdf">pdf </a>  &nbsp <a href="https://robopen.github.io/">project page </a>  &nbsp <a href="javascript:toggleblock('arxiv23roboagentBib')">bibtex </a>  &nbsp <a href="https://robopen.github.io/roboset/">data </a> </p>
+<div class="papermeta" id="arxiv23roboagentMeta">
+<pre xml:space="preserve" id="arxiv23roboagentBib">
+
+@article{bharadhwaj2023roboagent,
+  title={Roboagent: Generalization and efficiency in robot manipulation via semantic augmentations and action chunking},
+  author={Bharadhwaj, Homanga and Vakil, Jay and Sharma, Mohit and Gupta, Abhinav and Tulsiani, Shubham and Kumar, Vikash},
+  journal={arXiv preprint arXiv:2309.01918},
+  year={2023}
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('arxiv23roboagentBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+<div class="year_heading" data-selected="n"><br>2024<hr width="220px" align="left"></div>
+<!--------------------------------------------------------------------------->
+<div class="paper" id="3dv24relposepp" data-selected="y">
+<img class="paper" src="figures/3dv24relposepp.gif" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">RelPose++: Recovering 6D Poses from Sparse-view Observations</b> <br/> 
+Amy Lin*, Jason Y. Zhang*, Deva Ramanan, <strong>Shubham Tulsiani</strong> <br/> 
+3DV, 2024 <br/> 
+<a href="https://arxiv.org/pdf/2305.04926.pdf">pdf </a>  &nbsp <a href="https://amyxlase.github.io/relpose-plus-plus/">project page </a>  &nbsp <a href="javascript:toggleblock('3dv24relposeppBib')">bibtex </a>  &nbsp <a href="https://github.com/amyxlase/relpose-plus-plus">code </a> </p>
+<div class="papermeta" id="3dv24relposeppMeta">
+<pre xml:space="preserve" id="3dv24relposeppBib">
+
+@inproceedings{lin2024relposepp,
+    title={RelPose++: Recovering 6D Poses from Sparse-view Observations},
+    author={Lin, Amy and Zhang, Jason Y and Ramanan, Deva and Tulsiani, Shubham},
+    booktitle={3DV},
+    year={2024}
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('3dv24relposeppBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+<div class="year_heading" data-selected="n"><br>2023<hr width="220px" align="left"></div>
 <!--------------------------------------------------------------------------->
 <div class="paper" id="iccv23diffhoi" data-selected="y">
 <img class="paper" src="https://judyye.github.io/data/iccv23.gif" />
@@ -222,7 +317,7 @@ hideblock('iccv23textureBib');
 <!--------------------------------------------------------------------------->
 <div class="paper" id="icra23affordance" data-selected="n">
 <img class="paper" src="https://homangab.github.io/pics/affordance.png" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">Visual Affordance Prediction for Guiding Robot Exploration</b> <br/> 
+<p><b id="papertitle">Visual Affordance Prediction for Guiding Robot Exploration</b> <br/> 
 Homanga Bharadhwaj, Abhinav Gupta, <strong>Shubham Tulsiani</strong> <br/> 
 ICRA, 2023 <br/> 
 <a href="https://homangab.github.io/papers/affordance_exploration_icra.pdf">pdf </a>  &nbsp <a href="https://sites.google.com/andrew.cmu.edu/affordance-robotics/home">project page </a>  &nbsp <a href="javascript:toggleblock('icra23affordanceBib')">bibtex </a>  &nbsp <a href="https://github.com/homangab/visual_affordance_robot_exploration">code </a> </p>
@@ -245,7 +340,7 @@ hideblock('icra23affordanceBib');
 <!--------------------------------------------------------------------------->
 <div class="paper" id="iclr23analogical" data-selected="n">
 <img class="paper" src="https://nickgkan.github.io/teasers/iclr23_mem.gif" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">Analogy-Forming Transformers for Few-Shot 3D Parsing</b> <br/> 
+<p><b id="papertitle">Analogy-Forming Transformers for Few-Shot 3D Parsing</b> <br/> 
 Nikolaos Gkanatsios*, Mayank Singh*, Zhaoyuan Fang, <strong>Shubham Tulsiani</strong>, Katerina Fragkiadaki <br/> 
 ICLR, 2023 <br/> 
 <a href="https://arxiv.org/pdf/2304.14382.pdf">pdf </a>  &nbsp <a href="https://analogicalnets.github.io/">project page </a>  &nbsp <a href="javascript:toggleblock('iclr23analogicalBib')">bibtex </a>  &nbsp <a href="https://github.com/nickgkan/analogicalnets">code </a> </p>
@@ -339,7 +434,7 @@ hideblock('neurips22dycheckBib');
 <!--------------------------------------------------------------------------->
 
 <!--------------------------------------------------------------------------->
-<div class="paper" id="eccv22relpose" data-selected="y">
+<div class="paper" id="eccv22relpose" data-selected="n">
 <img class="paper" src="./figures/eccv22relpose.gif" />
 <p><b id="papertitle">RelPose: Predicting Probabilistic Relative Rotation for Single Objects in the Wild</b> <br/> 
 Jason Y. Zhang, Deva Ramanan, <strong>Shubham Tulsiani</strong> <br/> 
@@ -362,7 +457,7 @@ hideblock('eccv22relposeBib');
 <!--------------------------------------------------------------------------->
 
 <!--------------------------------------------------------------------------->
-<div class="paper" id="cvpr22ss3d" data-selected="y">
+<div class="paper" id="cvpr22ss3d" data-selected="n">
 <img class="paper" src="figures/cvpr22ss3d.gif" />
 <p><b id="papertitle">Pre-train, Self-train, Distill: A simple recipe for Supersizing 3D Reconstruction</b> <br/> 
 Kalyan Vasudev Alwala, Abhinav Gupta, <strong>Shubham Tulsiani</strong> <br/> 
@@ -546,7 +641,7 @@ hideblock('icml21pixelBib');
 <!--------------------------------------------------------------------------->
 
 <!--------------------------------------------------------------------------->
-<div class="paper" id="cvpr21mesh" data-selected="y">
+<div class="paper" id="cvpr21mesh" data-selected="n">
 <img class="paper" src="https://judyye.github.io/ShSMesh/data/teaser.gif" />
 <p><b id="papertitle">Shelf-Supervised Mesh Prediction in the Wild</b> <br/> 
 Yufei Ye, <strong>Shubham Tulsiani</strong>, Abhinav Gupta <br/> 
