--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
   Prior to joining CMU, I was a Research Scientist at <a href = "https://research.fb.com/category/facebook-ai-research/">FAIR</a>, Pittsburgh working with <a href = "https://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>. I previously graduated from UC, Berkeley where I was advised by <a href = "http://www.eecs.berkeley.edu/~malik">Jitendra Malik</a>, and also frequently collaborated with <a href = "http://www.eecs.berkeley.edu/~efros">Alyosha Efros.</a>
   <p><br></p>
   <p>
-    <a href="javascript:toggleblock('email')">email</a> | <a href="https://scholar.google.com/citations?user=06rffEkAAAAJ&hl=en">google scholar</a> | <a href="https://twitter.com/shubhtuls"> twitter </a>
+    <a href="javascript:toggleblock('contact')">contact</a> | <a href="https://scholar.google.com/citations?user=06rffEkAAAAJ&hl=en">google scholar</a> | <a href="https://twitter.com/shubhtuls"> twitter </a>
   </p>
-  <pre xml:space="preserve" id="email" style="font-size: 12px">
+  <pre xml:space="preserve" id="contact" style="font-size: 12px">
 
-shubhtuls AT cmu.edu
+email: shubhtuls AT cmu.edu
+Office: Smith Hall 230
   </pre>
   <script xml:space="preserve" language="JavaScript">
-  hideblock('email');
+  hideblock('contact');
   </script>
   </td>
 
