--- a/index.html
+++ b/index.html
@@ -123,6 +123,14 @@ We do not have any short-term positions at this time.
     </td>
   </tr>
   <tr><td><br></td></tr>
+  <tr>
+  <td>
+    <b>Undergraduate Students</b><br>
+    <a href="https://thatbrguy.github.io/">Amy Lin</a><br>
+    <a href="https://yanbo-xu.netlify.app/">Lucas Wu</a><br>
+  </td>
+</tr>
+  <tr><td><br></td></tr>
   <tr><td><b>Alumni</b><br>
     <em>MSR</em>: <a href="https://www.zhiz.dev/">Zhizhuo (Z) Zhou</a> <br><br>
     <em>MSCV</em>: <a href="https://poorvirhebbar.github.io/">Poorvi Hebbar</a>,
@@ -176,16 +184,39 @@ hideblock('arxiv23upfusionBib');
 </div>
 </div>
 <!--------------------------------------------------------------------------->
+<div class="year_heading" data-selected="n"><br>2024<hr width="220px" align="left"></div>
+<!--------------------------------------------------------------------------->
+<div class="paper" id="iclr24rays" data-selected="y">
+<img class="paper" src="figures/iclr24rays.gif" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">Cameras as Rays: Pose Estimation via Ray Diffusion</b> <br/> 
+Jason Y. Zhang*, Amy Lin*, Moneish Kumar, Tzu-Hsuan Yang, Deva Ramanan, and <strong>Shubham Tulsiani</strong> <br/> 
+ICLR, 2024 <br/> 
+<a href="https://arxiv.org/pdf/2402.14817.pdf">pdf </a>  &nbsp <a href="https://jasonyzhang.com/RayDiffusion/">project page </a>  &nbsp <a href="javascript:toggleblock('iclr24raysBib')">bibtex </a>  &nbsp <a href="https://github.com/jasonyzhang/RayDiffusion">code </a> </p>
+<div class="papermeta" id="iclr24raysMeta">
+<pre xml:space="preserve" id="iclr24raysBib">
+
+@InProceedings{zhang2024raydiffusion,
+    title={Cameras as Rays: Pose Estimation via Ray Diffusion},
+    author={Zhang, Jason Y and Lin, Amy and Kumar, Moneish and Yang, Tzu-Hsuan and Ramanan, Deva and Tulsiani, Shubham},
+    booktitle={International Conference on Learning Representations (ICLR)},
+    year={2024}
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('iclr24raysBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
 
 <!--------------------------------------------------------------------------->
-<div class="paper" id="arxiv23hopman" data-selected="y">
-<img class="paper" src="figures/arxiv23hopman.gif" />
+<div class="paper" id="icra24hopman" data-selected="y">
+<img class="paper" src="figures/icra24hopman.gif" />
 <p> <strong style="color:red">[New]</strong> <b id="papertitle">Towards Generalizable Zero-Shot Manipulation via Translating Human Interaction Plans</b> <br/> 
 Homanga Bharadhwaj, Abhinav Gupta*, Vikash Kumar* <strong>Shubham Tulsiani</strong>* <br/> 
-arXiv preprint, 2023 <br/> 
-<a href="https://homangab.github.io/hopman/hopman_paper_appendix.pdf">pdf </a>  &nbsp <a href="https://homangab.github.io/hopman/">project page </a>  &nbsp <a href="javascript:toggleblock('arxiv23hopmanBib')">bibtex </a> </p>
-<div class="papermeta" id="arxiv23hopmanMeta">
-<pre xml:space="preserve" id="arxiv23hopmanBib">
+ICRA, 2024 <br/> 
+<a href="https://homangab.github.io/hopman/hopman_paper_appendix.pdf">pdf </a>  &nbsp <a href="https://homangab.github.io/hopman/">project page </a>  &nbsp <a href="javascript:toggleblock('icra24hopmanBib')">bibtex </a> </p>
+<div class="papermeta" id="icra24hopmanMeta">
+<pre xml:space="preserve" id="icra24hopmanBib">
 
 @article{bharadhwaj2023towards,
   title={Towards Generalizable Zero-Shot Manipulation via Translating Human Interaction Plans},
@@ -194,21 +225,21 @@ arXiv preprint, 2023 <br/>
   year={2023}
 }</pre></td>
 <script language="javascript" type="text/javascript" xml:space="preserve">
-hideblock('arxiv23hopmanBib');
+hideblock('icra24hopmanBib');
 </script>
 </div>
 </div>
 <!--------------------------------------------------------------------------->
 
 <!--------------------------------------------------------------------------->
-<div class="paper" id="arxiv23roboagent" data-selected="n">
+<div class="paper" id="icra24roboagent" data-selected="n">
 <img class="paper" src="https://homangab.github.io/pics/robopen.png" />
 <p> <strong style="color:red">[New]</strong> <b id="papertitle">RoboAgent: Towards Sample Efficient Robot Manipulation with Semantic Augmentations and Action Chunking</b> <br/> 
 Homanga Bharadhwaj*, Jay Vakil*, Mohit Sharma*, Abhinav Gupta, <strong>Shubham Tulsiani</strong>, Vikash Kumar <br/> 
-arXiv preprint, 2023 <br/> 
-<a href="https://robopen.github.io/media/roboagent.pdf">pdf </a>  &nbsp <a href="https://robopen.github.io/">project page </a>  &nbsp <a href="javascript:toggleblock('arxiv23roboagentBib')">bibtex </a>  &nbsp <a href="https://robopen.github.io/roboset/">data </a> </p>
-<div class="papermeta" id="arxiv23roboagentMeta">
-<pre xml:space="preserve" id="arxiv23roboagentBib">
+ICRA, 2024 <br/> 
+<a href="https://robopen.github.io/media/roboagent.pdf">pdf </a>  &nbsp <a href="https://robopen.github.io/">project page </a>  &nbsp <a href="javascript:toggleblock('icra24roboagentBib')">bibtex </a>  &nbsp <a href="https://robopen.github.io/roboset/">data </a> </p>
+<div class="papermeta" id="icra24roboagentMeta">
+<pre xml:space="preserve" id="icra24roboagentBib">
 
 @article{bharadhwaj2023roboagent,
   title={Roboagent: Generalization and efficiency in robot manipulation via semantic augmentations and action chunking},
@@ -217,12 +248,12 @@ arXiv preprint, 2023 <br/>
   year={2023}
 }</pre></td>
 <script language="javascript" type="text/javascript" xml:space="preserve">
-hideblock('arxiv23roboagentBib');
+hideblock('icra24roboagentBib');
 </script>
 </div>
 </div>
 <!--------------------------------------------------------------------------->
-<div class="year_heading" data-selected="n"><br>2024<hr width="220px" align="left"></div>
+
 <!--------------------------------------------------------------------------->
 <div class="paper" id="3dv24relposepp" data-selected="y">
 <img class="paper" src="figures/3dv24relposepp.gif" />
