--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ We do not have any short-term positions at this time.
   <tr>
   <td>
     <b>Undergraduate Students</b><br>
-    <a href="https://thatbrguy.github.io/">Amy Lin</a><br>
-    <a href="https://yanbo-xu.netlify.app/">Lucas Wu</a><br>
+    <a href="https://amyxlase.github.io/">Amy Lin</a><br>
+    Lucas Wu<br>
   </td>
 </tr>
   <tr><td><br></td></tr>
