--- a/index.html
+++ b/index.html
@@ -161,35 +161,58 @@ We do not have any short-term positions at this time.
 </div>
 
 <div class="section">
-<h2> Publications (<a href="javascript:showselected()" id="select" >selected</a> | <a href="javascript:showall()" id="unselect" >all</a>) </h2><br><div class="year_heading" data-selected="n"><br>preprints<hr width="220px" align="left"></div>
+<h2> Publications (<a href="javascript:showselected()" id="select" >selected</a> | <a href="javascript:showall()" id="unselect" >all</a>) </h2><br><div class="year_heading" data-selected="n"><br>2024<hr width="220px" align="left"></div>
 <!--------------------------------------------------------------------------->
-<div class="paper" id="arxiv23upfusion" data-selected="y">
-<img class="paper" src="https://bharathrajn.com/assets/img/publication_preview/ITW_lock.gif" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">UpFusion: Novel View Diffusion from Unposed Sparse View Observations</b> <br/> 
-Bharath Raj Nagoor Kani, Hsin-Ying Lee, Sergey Tulyakov, <strong>Shubham Tulsiani</strong> <br/> 
-arXiv preprint, 2023 <br/> 
-<a href="https://arxiv.org/pdf/2312.06661.pdf">pdf </a>  &nbsp <a href="https://upfusion3d.github.io/">project page </a>  &nbsp <a href="javascript:toggleblock('arxiv23upfusionBib')">bibtex </a>  &nbsp <a href="https://github.com/upfusion3d/upfusion">code </a> </p>
-<div class="papermeta" id="arxiv23upfusionMeta">
-<pre xml:space="preserve" id="arxiv23upfusionBib">
+<div class="paper" id="cvpr24ghop" data-selected="y">
+<img class="paper" src="figures/cvpr24ghop.png" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">G-HOP: Generative Hand-Object Prior for Interaction Reconstruction and Grasp Synthesis</b> <br/> 
+Yufei Ye, Abhinav Gupta, Kris Kitani, <strong>Shubham Tulsiani</strong> <br/> 
+CVPR, 2024 <br/> 
+<a href="#">pdf </a>  &nbsp <a href="https://judyye.github.io/ghop-www/">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr24ghopBib')">bibtex </a> </p>
+<div class="papermeta" id="cvpr24ghopMeta">
+<pre xml:space="preserve" id="cvpr24ghopBib">
 
-@article{upfusion2023,
-  author    = {Nagoor Kani, Bharath Raj and Lee, Hsin-Ying and Tulyakov, Sergey and Tulsiani, Shubham},
-  title     = {UpFusion: Novel View Diffusion from Unposed Sparse View Observations},
-  journal   = {arXiv preprint arXiv:2312.06661},
-  year      = {2023},
+@inproceedings{ye2024ghop,
+    author = {Ye, Yufei and Gupta, Abhinav and Kitani, Kris and Tulsiani, Shubham}
+    title = {G-HOP: Generative Hand-Object Prior for Interaction Reconstruction and Grasp Synthesis},
+    booktitle={CVPR},
+    year={2024}
 }</pre></td>
 <script language="javascript" type="text/javascript" xml:space="preserve">
-hideblock('arxiv23upfusionBib');
+hideblock('cvpr24ghopBib');
 </script>
 </div>
 </div>
 <!--------------------------------------------------------------------------->
-<div class="year_heading" data-selected="n"><br>2024<hr width="220px" align="left"></div>
+
+<!--------------------------------------------------------------------------->
+<div class="paper" id="cvpr24mvdfusion" data-selected="y">
+<img class="paper" src="figures/cvpr24mvdfusion.gif" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">MVD-Fusion: Single-view 3D via Depth-consistent Multi-view Generation</b> <br/> 
+Hanzhe Hu*, Zhizhuo Zhou*, Varun Jampani, <strong>Shubham Tulsiani</strong> <br/> 
+CVPR, 2024 <br/> 
+<a href="https://arxiv.org/pdf/2404.03656">pdf </a>  &nbsp <a href="https://mvd-fusion.github.io//">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr24mvdfusionBib')">bibtex </a>  &nbsp <a href="https://github.com/zhizdev/mvdfusion">code </a> </p>
+<div class="papermeta" id="cvpr24mvdfusionMeta">
+<pre xml:space="preserve" id="cvpr24mvdfusionBib">
+
+@inproceedings{hu2024mvdfusion,
+    title={MVD-Fusion: Single-view 3D via Depth-consistent Multi-view Generation}, 
+    author={Hanzhe Hu and Zhizhuo Zhou and Varun Jampani and Shubham Tulsiani},
+    booktitle={CVPR},
+    year={2024}
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('cvpr24mvdfusionBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
 <!--------------------------------------------------------------------------->
 <div class="paper" id="iclr24rays" data-selected="y">
 <img class="paper" src="figures/iclr24rays.gif" />
 <p> <strong style="color:red">[New]</strong> <b id="papertitle">Cameras as Rays: Pose Estimation via Ray Diffusion</b> <br/> 
-Jason Y. Zhang*, Amy Lin*, Moneish Kumar, Tzu-Hsuan Yang, Deva Ramanan, and <strong>Shubham Tulsiani</strong> <br/> 
+Jason Y. Zhang*, Amy Lin*, Moneish Kumar, Tzu-Hsuan Yang, Deva Ramanan, <strong>Shubham Tulsiani</strong> <br/> 
 ICLR, 2024 <br/> 
 <a href="https://arxiv.org/pdf/2402.14817.pdf">pdf </a>  &nbsp <a href="https://jasonyzhang.com/RayDiffusion/">project page </a>  &nbsp <a href="javascript:toggleblock('iclr24raysBib')">bibtex </a>  &nbsp <a href="https://github.com/jasonyzhang/RayDiffusion">code </a> </p>
 <div class="papermeta" id="iclr24raysMeta">
@@ -212,8 +235,8 @@ hideblock('iclr24raysBib');
 <div class="paper" id="icra24hopman" data-selected="y">
 <img class="paper" src="figures/icra24hopman.gif" />
 <p> <strong style="color:red">[New]</strong> <b id="papertitle">Towards Generalizable Zero-Shot Manipulation via Translating Human Interaction Plans</b> <br/> 
-Homanga Bharadhwaj, Abhinav Gupta*, Vikash Kumar* <strong>Shubham Tulsiani</strong>* <br/> 
-ICRA, 2024 <br/> 
+Homanga Bharadhwaj, Abhinav Gupta*, Vikash Kumar*, <strong>Shubham Tulsiani</strong>* <br/> 
+ICRA, 2024  <strong style="color:red">(Finalist for Best Paper Award in Robot Manipulation)</strong><br/> 
 <a href="https://homangab.github.io/hopman/hopman_paper_appendix.pdf">pdf </a>  &nbsp <a href="https://homangab.github.io/hopman/">project page </a>  &nbsp <a href="javascript:toggleblock('icra24hopmanBib')">bibtex </a> </p>
 <div class="papermeta" id="icra24hopmanMeta">
 <pre xml:space="preserve" id="icra24hopmanBib">
@@ -255,9 +278,9 @@ hideblock('icra24roboagentBib');
 <!--------------------------------------------------------------------------->
 
 <!--------------------------------------------------------------------------->
-<div class="paper" id="3dv24relposepp" data-selected="y">
+<div class="paper" id="3dv24relposepp" data-selected="n">
 <img class="paper" src="figures/3dv24relposepp.gif" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">RelPose++: Recovering 6D Poses from Sparse-view Observations</b> <br/> 
+<p><b id="papertitle">RelPose++: Recovering 6D Poses from Sparse-view Observations</b> <br/> 
 Amy Lin*, Jason Y. Zhang*, Deva Ramanan, <strong>Shubham Tulsiani</strong> <br/> 
 3DV, 2024 <br/> 
 <a href="https://arxiv.org/pdf/2305.04926.pdf">pdf </a>  &nbsp <a href="https://amyxlase.github.io/relpose-plus-plus/">project page </a>  &nbsp <a href="javascript:toggleblock('3dv24relposeppBib')">bibtex </a>  &nbsp <a href="https://github.com/amyxlase/relpose-plus-plus">code </a> </p>
@@ -278,9 +301,9 @@ hideblock('3dv24relposeppBib');
 <!--------------------------------------------------------------------------->
 <div class="year_heading" data-selected="n"><br>2023<hr width="220px" align="left"></div>
 <!--------------------------------------------------------------------------->
-<div class="paper" id="iccv23diffhoi" data-selected="y">
+<div class="paper" id="iccv23diffhoi" data-selected="n">
 <img class="paper" src="https://judyye.github.io/data/iccv23.gif" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">Diffusion-Guided Reconstruction of Everyday Hand-Object Interaction Clips</b> <br/> 
+<p><b id="papertitle">Diffusion-Guided Reconstruction of Everyday Hand-Object Interaction Clips</b> <br/> 
 Yufei Ye, Poorvi Hebbar, Abhinav Gupta, <strong>Shubham Tulsiani</strong> <br/> 
 ICCV, 2023 <br/> 
 <a href="https://arxiv.org/pdf/2309.05663.pdf">pdf </a>  &nbsp <a href="https://judyye.github.io/diffhoi-www/">project page </a>  &nbsp <a href="javascript:toggleblock('iccv23diffhoiBib')">bibtex </a>  &nbsp <a href="https://github.com/JudyYe/diffhoi">code </a> </p>
@@ -303,7 +326,7 @@ hideblock('iccv23diffhoiBib');
 <!--------------------------------------------------------------------------->
 <div class="paper" id="iccv23control" data-selected="n">
 <img class="paper" src="https://sudeepdasari.github.io/research/manipulate_by_seeing/test.gif" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">Manipulate by Seeing: Creating Manipulation Controllers from Pre-Trained Representations</b> <br/> 
+<p><b id="papertitle">Manipulate by Seeing: Creating Manipulation Controllers from Pre-Trained Representations</b> <br/> 
 Jianren Wang*, Sudeep Dasari*, Mohan Kumar Srirama, <strong>Shubham Tulsiani</strong>, Abhinav Gupta <br/> 
 ICCV, 2023 <br/> 
 <a href="https://arxiv.org/pdf/2303.08135">pdf </a>  &nbsp <a href="https://agi-labs.github.io/manipulate-by-seeing/">project page </a>  &nbsp <a href="javascript:toggleblock('iccv23controlBib')">bibtex </a>  &nbsp <a href="https://github.com/AGI-Labs/manipulate-by-seeing">code </a> </p>
@@ -326,7 +349,7 @@ hideblock('iccv23controlBib');
 <!--------------------------------------------------------------------------->
 <div class="paper" id="iccv23texture" data-selected="n">
 <img class="paper" src="figures/iccv23texture.png" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">Mesh2Tex: Generating Mesh Textures from Image Queries</b> <br/> 
+<p><b id="papertitle">Mesh2Tex: Generating Mesh Textures from Image Queries</b> <br/> 
 Alexey Bokhovkin, <strong>Shubham Tulsiani</strong>, Angela Dai <br/> 
 ICCV, 2023 <br/> 
 <a href="https://arxiv.org/pdf/2304.05868">pdf </a>  &nbsp <a href="https://alexeybokhovkin.github.io/mesh2tex/">project page </a>  &nbsp <a href="javascript:toggleblock('iccv23textureBib')">bibtex </a> </p>
@@ -743,7 +766,7 @@ hideblock('corl20vimeBib');
 <!--------------------------------------------------------------------------->
 
 <!--------------------------------------------------------------------------->
-<div class="paper" id="cvpr20acsm" data-selected="y">
+<div class="paper" id="cvpr20acsm" data-selected="n">
 <img class="paper" src="figures/cvpr20acsm.png" />
 <p><b id="papertitle">Articulation-aware Canonical Surface Mapping</b> <br/> 
 Nilesh Kulkarni, Abhinav Gupta, David Fouhey, <strong>Shubham Tulsiani</strong> <br/> 
@@ -1048,7 +1071,7 @@ hideblock('eccv18cmrBib');
 <!--------------------------------------------------------------------------->
 
 <!--------------------------------------------------------------------------->
-<div class="paper" id="cvpr18mvc" data-selected="y">
+<div class="paper" id="cvpr18mvc" data-selected="n">
 <img class="paper" src="figures/arxiv18mvc.png" />
 <p><b id="papertitle">Multi-view Consistency as Supervisory Signal for Learning Shape and Pose Prediction</b> <br/> 
 <strong>Shubham Tulsiani</strong>, Alexei A. Efros, Jitendra Malik <br/> 
@@ -1313,7 +1336,7 @@ hideblock('cvpr15vpsBib');
 <p><b id="papertitle">Category-Specific Object Reconstruction from a Single Image</b> <br/> 
 Abhishek Kar*, <strong>Shubham Tulsiani</strong>*, Jo&atilde;o Carreira, Jitendra Malik <br/> 
 CVPR, 2015  <strong style="color:red">(Best Student Paper Award)</strong><br/> 
-<a href="https://arxiv.org/pdf/1411.6069.pdf">pdf </a>  &nbsp <a href="http://www.cs.berkeley.edu/~akar/categoryShapes/">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr15csdmBib')">bibtex </a>  &nbsp <a href="https://github.com/akar43/CategoryShapes">code </a>  &nbsp <a href="Best Student Paper Award">note </a> </p>
+<a href="https://arxiv.org/pdf/1411.6069.pdf">pdf </a>  &nbsp <a href="http://www.cs.berkeley.edu/~akar/categoryShapes/">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr15csdmBib')">bibtex </a>  &nbsp <a href="https://github.com/akar43/CategoryShapes">code </a> </p>
 <div class="papermeta" id="cvpr15csdmMeta">
 <pre xml:space="preserve" id="cvpr15csdmBib">
 
