--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ We do not have any short-term positions at this time.
 <p> <strong style="color:red">[New]</strong> <b id="papertitle">G-HOP: Generative Hand-Object Prior for Interaction Reconstruction and Grasp Synthesis</b> <br/> 
 Yufei Ye, Abhinav Gupta, Kris Kitani, <strong>Shubham Tulsiani</strong> <br/> 
 CVPR, 2024 <br/> 
-<a href="#">pdf </a>  &nbsp <a href="https://judyye.github.io/ghop-www/">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr24ghopBib')">bibtex </a> </p>
+<a href="https://arxiv.org/pdf/2404.12383">pdf </a>  &nbsp <a href="https://judyye.github.io/ghop-www/">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr24ghopBib')">bibtex </a> </p>
 <div class="papermeta" id="cvpr24ghopMeta">
 <pre xml:space="preserve" id="cvpr24ghopBib">
 
